syntax = "proto3";

package proto;

service SeasonUpdate {
	rpc SeasonUpdate (SeasonUpdates) returns (Empty) {}
}

service LiveStatUpdate {
	rpc GetGame (Game) returns (Empty) {}
	rpc GetStat (Stat) returns (Empty) {}
}

message Empty {}

message Team {
	int32 lcsid = 2;
	int32 riotid = 3;
	string name = 4;
	string tag = 5;
}

message Player {
	int32 lcsid = 2;
	int32 riotid = 3;
	string name = 4;
	int32 teamid = 5;
}

message Game {
	int32 lcsid = 2;
	string riotgameid = 3;
	string riotmatchid = 4;
	int32 redteamid = 5;
	int32 blueteamid = 6;
	int64 gamestart = 7;
	int64 gameend = 8;
}

message Stat {
	string riotname = 2;
}

message SeasonUpdates {
	repeated Team teams = 1;
	repeated Player players = 2;
}
