syntax = "proto3";

package proto;

service ContextUpdate {
	rpc CreateTeam (Team) returns (Result) {}
	rpc UpdateTeam (Team) returns (Result) {}
	rpc CreatePlayer (Player) returns (Result) {}
	rpc UpdatePlayer (Player) returns (Result) {}
	rpc CreateGame (Game) returns (Result) {}
	rpc UpdateGame (Game) returns (Result) {}
	rpc CreateStat(Stat) returns (Result) {}
	rpc UpdateStat(Stat) returns (Result) {}
	rpc BatchUpdate (BatchUpdates) returns (Result) {}
}

message Team {
	int32 teamid = 1;
	int32 lcsid = 2;
	int32 riotid = 3;
	string name = 4;
	string tag = 5;
}

message Teams {
	repeated Team teams = 1;
}

message Player {
	int32 playerid = 1;
	int32 lcsid = 2;
	int32 riotid = 3;
	string name = 4;
	int32 teamid = 5;
}

message Players {
	repeated Player players = 1;
}

message Game {
	int32 gameid = 1;
	int32 lcsid = 2;
	string riotgameid = 3;
	string riotmatchid = 4;
	int32 redteamid = 5;
	int32 blueteamid = 6;
	int64 gamestart = 7;
	int64 gameend = 8;
}

message Games {
	repeated Game games = 1;
}

message Stat {
	int32 statid = 1;
	string riotname = 2;
}

message Stats {
	repeated Stat stats = 1;
}

message BatchUpdates {
	Teams teamsCreate = 1;
	Teams teamsUpdate = 2;
	Players playersCreate = 3;
	Players playersUpdate = 4;
	Games gamesCreate = 5;
	Games gamesUpdate = 6;
	Stats statsCreate = 7;
	Stats statsUpdate = 8;
}

message Result {
	enum Status {
		SUCCESS = 0;
		FAIL = 1;
	}
	Status status = 1;
	string detail = 2;
}
